--- a/src/styles/components/sections.scss
+++ b/src/styles/components/sections.scss
@@ -1,11 +1,10 @@
 // Padding is done so the background will change while the content inside is correctly positioned
 
 .section-heading {
-	// position: relative;
 	background-color: white;
 
 	padding-top: 5rem;
-	padding-bottom: 25rem;
+	padding-bottom: 20rem;
 }
 
 // Colors provided by project don't seem correct so I guessed a lighter shade of grey
